gen/cloudtrace/v1/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-cloudtrace1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/cloudtrace/v1/lib)
error[E0433]: failed to resolve: unresolved import
   --> gen/cloudtrace/v1/lib/src/lib.rs:725:33
    |
725 |             view: Option<crate::traces::params::ListView>,
    |                                 ^^^^^^
    |                                 |
    |                                 unresolved import
    |                                 help: a similar path exists: `crate::projects::traces`

error[E0433]: failed to resolve: unresolved import
   --> gen/cloudtrace/v1/lib/src/lib.rs:770:50
    |
770 |             pub fn view(&mut self, value: crate::traces::params::ListView) -> &mut Self {
    |                                                  ^^^^^^
    |                                                  |
    |                                                  unresolved import
    |                                                  help: a similar path exists: `crate::projects::traces`

error[E0423]: expected value, found struct `traces::TracesActions`
   --> gen/cloudtrace/v1/lib/src/lib.rs:357:13
    |
357 |             traces::TracesActions
    |             ^^^^^^^^^^^^^^^^^^^^^ did you mean `traces::TracesActions { /* fields */ }`?

warning: unreachable expression
   --> gen/cloudtrace/v1/lib/src/lib.rs:517:21
    |
517 | /                     Ok(match value {
518 | |                         _ => {
519 | |                             return Err(::serde::de::Error::custom(format!(
520 | |                                 "invalid enum for #name: {}",
...   |
523 | |                         }
524 | |                     })
    | |______________________^
    |
    = note: #[warn(unreachable_code)] on by default

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0423, E0433.
For more information about an error, try `rustc --explain E0423`.
error: Could not compile `google-cloudtrace1`.

To learn more, run the command again with --verbose.
